--- a/context/Dockerfile
+++ b/context/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get -y update && apt-get install -y \
 RUN mkdir -p /usr/local/lib/go
 ENV GOPATH=/usr/local/lib/go
 ENV VER="v1.45"
-RUN go get -u -v "github.com/ncw/rclone@${VER}"
+RUN GO111MODULE=on go get -u -v "github.com/ncw/rclone@${VER}"
 RUN useradd -m rcloner
 USER rcloner
 ENV HOME /home/rcloner
