testing FUSE mount

--- a/context/Dockerfile
+++ b/context/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get -y update && apt-get install -y \
     ca-certificates \
     git \
     golang-go \
+    fuse \
     --no-install-recommends
 RUN mkdir -p /usr/local/lib/go
 ENV GOPATH=/usr/local/lib/go
@@ -17,5 +18,6 @@ RUN git clone -b "${VER}" --depth 1 https://github.com/ncw/rclone \
 RUN useradd -m rcloner
 USER rcloner
 ENV HOME /home/rcloner
+WORKDIR /home/rcloner
 VOLUME /home/rcloner
 ENTRYPOINT ["/usr/local/lib/go/bin/rclone"]
